--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -22,7 +22,16 @@
     "\n",
     "https://odsc.com/speakers/deep-dive-into-reinforcement-learning-with-ppo-using-tf-agents-tensorflow-2-0/\n",
     "\n",
-    "Link to this notebook: https://bit.ly/rl-odsc-2021"
+    "Link to this notebook: https://bit.ly/rl-odsc-2021\n",
+    "\n",
+    "## Why would you care?\n",
+    "\n",
+    "* RL is not really succesful in real world applications\n",
+    "* PPO is super smart, though\n",
+    "  * Uses nice tricks: convert hard constraints to penalty losses\n",
+    "  * is just fun to watch\n",
+    "  * gives deeper insights into how DL works\n",
+    "  * future versions might actuallly be much more stable: https://arxiv.org/abs/2110.00641"
    ]
   },
   {
@@ -1535,13 +1544,13 @@
     "\n",
     "### Total Loss\n",
     "\n",
-    "<img src='https://github.com/embarced/notebooks/raw/master/img/ppo-loss.png'>\n",
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/ppo-loss.png'>\n",
     "\n",
     "https://arxiv.org/abs/1707.06347\n",
     "\n",
     "## KL Loss as a replacement for clipping\n",
     "\n",
-    "<img src='https://github.com/embarced/notebooks/raw/master/img/kl-loss.png'>\n",
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/kl-loss.png'>\n",
     "\n",
     "https://arxiv.org/abs/1707.06347"
    ]
@@ -1603,9 +1612,15 @@
     "\n",
     "* direct loss of actor network, which is the only thing we use after training\n",
     "* we want a small update of actor network from data sampled on policy (from the same network)\n",
+    "  * https://youtu.be/xvRrgxcpaHY?t=311\n",
+    "* you dont't want to optimize to maximum, because it is a noisy estimate\n",
+    "  * https://youtu.be/xvRrgxcpaHY?t=522\n",
     "\n",
+    "### PPO loss is the same as PG loss\n",
     "\n",
-    "John Schulman: Natural Policy Gradients, TRPO, PPO: https://youtu.be/xvRrgxcpaHY?t=311"
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/pg-loss.png'>\n",
+    "\n",
+    "John Schulman: Natural Policy Gradients, TRPO, PPO"
    ]
   },
   {
@@ -1918,7 +1933,7 @@
    "source": [
     "# Step VII: In the end all that matters is the policy\n",
     "\n",
-    "<img src='https://djcordhose.github.io/ml-workshop/img/rl/rl-train-play-2.png'>"
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/rl-train-play-2.png'>"
    ]
   },
   {
