--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -38,7 +38,12 @@
     "  * Choose your level\n",
     "* Workshop should not be limited by my understanding\n",
     "  * links to primary sources, videos, papers\n",
-    "* this notebook should serve as inpiration and collection of links\n"
+    "* this notebook should serve as inpiration and collection of links\n",
+    "\n",
+    "## Olli\n",
+    "* works as a ML consultant\n",
+    "* used to be a programmer rather than a data scientist\n",
+    "* does not like formulas or papers, but manages to read them anyway (and so can you)"
    ]
   },
   {
