--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -39,11 +39,17 @@
     "* Workshop should not be limited by my understanding\n",
     "  * links to primary sources, videos, papers\n",
     "* this notebook should serve as inpiration and collection of links\n",
+    "* all interaction is welcome\n",
     "\n",
     "## Olli\n",
-    "* works as a ML consultant\n",
+    "* works as a ML consultant in Hamburg, Germany\n",
     "* used to be a programmer rather than a data scientist\n",
-    "* does not like formulas or papers, but manages to read them anyway (and so can you)"
+    "* does not like formulas or papers, but manages to read them anyway (and so can you)\n",
+    "\n",
+    "## Hamburg, Germany\n",
+    "\n",
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/ever_ace_hidden.jpg' style='height: 250px'>\n",
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/insel.jpg' style='height: 250px'>"
    ]
   },
   {
@@ -143,10 +149,12 @@
    "source": [
     "## More Resources\n",
     "\n",
+    "* PG Intuition: http://karpathy.github.io/2016/05/31/rl/\n",
     "* https://spinningup.openai.com/en/latest/algorithms/ppo.html\n",
     "* PPO from scratch\n",
     "  * https://keras.io/examples/rl/ppo_cartpole/\n",
     "  * https://github.com/higgsfield/RL-Adventure-2/blob/master/3.ppo.ipynb\n",
+    "  * https://colab.research.google.com/github/google/brax/blob/main/notebooks/training_torch.ipynb\n",
     "* The scientific paper for PPO: https://arxiv.org/abs/1707.06347\n",
     "* A3C paper, explains several basic techniques such as the utility of the Critic and the additional entropy loss-term: https://arxiv.org/abs/1602.01783\n",
     "* TF-Agents\n",
@@ -155,7 +163,8 @@
     "  * https://www.tensorflow.org/agents/tutorials/5_replay_buffers_tutorial\n",
     "* https://arxiv.org/abs/2110.00641\n",
     "* Text Books\n",
-    "  * Classic from Sutton and Barto: http://incompleteideas.net/book/the-book-2nd.html (incl. full PDF and Code)"
+    "  * Classic from Sutton and Barto: http://incompleteideas.net/book/the-book-2nd.html (incl. full PDF and Code)\n",
+    "  "
    ]
   },
   {
@@ -1222,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 100,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1234,10 +1243,10 @@
     {
      "data": {
       "text/plain": [
-       "array([6.228777], dtype=float32)"
+       "array([4373.975], dtype=float32)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,26 +1408,9 @@
     "id": "TaAI4CN2x1yA"
    },
    "source": [
-    "# Step IV: Configure data collection for phase 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Object `tf_uniform_replay_buffer.TFUniformReplayBuffer` not found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# https://www.tensorflow.org/agents/tutorials/5_replay_buffers_tutorial\n",
+    "# Step IV: Configure data collection for phase 2\n",
     "\n",
-    "tf_uniform_replay_buffer.TFUniformReplayBuffer?"
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/trajectories.jpg'>"
    ]
   },
   {
@@ -1438,6 +1430,8 @@
    },
    "outputs": [],
    "source": [
+    "# https://www.tensorflow.org/agents/tutorials/5_replay_buffers_tutorial\n",
+    "\n",
     "from tf_agents.metrics import tf_metrics\n",
     "from tf_agents.replay_buffers import tf_uniform_replay_buffer\n",
     "from tf_agents.drivers.dynamic_episode_driver import DynamicEpisodeDriver\n",
@@ -1454,7 +1448,7 @@
     "collect_driver = DynamicEpisodeDriver(train_env,\n",
     "                                      tf_ppo_agent.collect_policy,\n",
     "                                      observers=[replay_buffer.add_batch, avg_return, avg_length],\n",
-    "                                      num_episodes=10)\n",
+    "                                      num_episodes=num_episodes)\n",
     "# just for optimized execution\n",
     "tf_ppo_agent.train = common.function(tf_ppo_agent.train)\n",
     "collect_driver.run = common.function(collect_driver.run)"
@@ -2004,7 +1998,9 @@
     "* use eventual reward as label for state\n",
     "  * might be after each step or at the end of an episode\n",
     "* store tuples of state, action until reward becomes clear\n",
-    "* use SGD analogous to supervised learning    "
+    "* use SGD analogous to supervised learning\n",
+    "\n",
+    "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/pg.jpg'>\n"
    ]
   },
   {
