--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -269,7 +269,7 @@
         "# mpl.rcParams[\"figure.dpi\"] = 300\n",
         "mpl.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
         "    !pip install -q networkx 2>/dev/null\n",
         "    !pip install imageio-ffmpeg"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
         "import tf_agents\n",
         "tf_agents.__version__"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +380,7 @@
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,7 +405,7 @@
       "source": [
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -420,7 +420,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
         "import tensorflow_probability as tfp\n",
         "tfp.__version__"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +477,7 @@
         "import networkx as nx\n",
         "nx.__version__"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
         "        else:\n",
         "            super().render(mode=mode)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -945,7 +945,7 @@
         "env = OrsoEnv()\n",
         "env.render(render_graph_labels=True)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -982,7 +982,7 @@
         "observation, reward, done, info = env.step(1)\n",
         "reward, done, info"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1009,7 +1009,7 @@
       "source": [
         "env.render(render_graph_labels=True)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1108,7 +1108,7 @@
         "\n",
         "observation"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1137,7 +1137,7 @@
         "observation, reward, done, info = env.step(1)\n",
         "observation"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1165,7 +1165,7 @@
       "source": [
         "reward, done, info"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1206,7 +1206,7 @@
         "        break\n",
         "env.close()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,7 +1282,7 @@
       "source": [
         "env.render(render_graph_labels=True)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1380,7 +1380,7 @@
         "train_env = tf_py_environment.TFPyEnvironment(train_py_env)\n",
         "eval_env = tf_py_environment.TFPyEnvironment(eval_py_env)          "
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1406,7 +1406,7 @@
         "    # dropout_layer_params=(0.2, 0.2, 0.2)\n",
         "    )"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1423,7 +1423,7 @@
         "observation = time_step.observation\n",
         "value_net(observation)[0].numpy()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1462,7 +1462,7 @@
         "    # dropout_layer_params=(0.2, 0.2, 0.2)\n",
         "    )"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1479,7 +1479,7 @@
         "distribution, _ = actor_net(observation[0], time_step.step_type, ())\n",
         "distribution.logits.numpy()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1506,7 +1506,7 @@
         "# greedy, highest category\n",
         "distribution.mode().numpy()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1572,7 +1572,7 @@
         "    num_epochs=10) # 25 by default, but we see better results with more frequent updates of the training data\n",
         "tf_ppo_agent.initialize()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1583,7 +1583,7 @@
       "source": [
         "# ppo_agent.PPOAgent?"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1627,7 +1627,7 @@
         "\n",
         "num_episodes =  10# @param {type:\"slider\", min:0, max:1000, step:1}\n"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1659,7 +1659,7 @@
         "tf_ppo_agent.train = common.function(tf_ppo_agent.train)\n",
         "collect_driver.run = common.function(collect_driver.run)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1676,7 +1676,7 @@
         "# as_dataset would allow choosing a smaller batch instead of full data set\n",
         "trajectories = replay_buffer.gather_all()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1697,7 +1697,7 @@
       "source": [
         "# trajectories?"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1713,7 +1713,7 @@
         "# batch_size = num_episodes * max_episode_steps (strangely off by one)\n",
         "trajectories.action[0].shape[0]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1739,7 +1739,7 @@
       "source": [
         "trajectories.action[0]"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1765,7 +1765,7 @@
       "source": [
         "trajectories.observation[0]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1798,7 +1798,7 @@
       "source": [
         "trajectories.reward[0]"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1822,7 +1822,7 @@
       "source": [
         "# tf_ppo_agent.train?"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1869,7 +1869,7 @@
         "num_iterations = 500 # @param {type:\"slider\", min:0, max:1000, step:1}\n",
         "log_interval = 25 # @param {type:\"slider\", min:0, max:100, step:1}"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1929,7 +1929,7 @@
         "        print('iteration = {0} / step = {1}: loss = {2}, avg return = {3}, avg length = {4}'.format(\n",
         "            iteration, step, total_loss, avg_return.result().numpy(), avg_length.result().numpy()))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2124,7 +2124,7 @@
         "mpl.rcParams['xtick.labelsize'] = 16\n",
         "mpl.rcParams['ytick.labelsize'] = 16"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2144,7 +2144,7 @@
         "plt.ylabel('Total loss')\n",
         "plt.xlabel('Step');"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2197,7 +2197,7 @@
         "* store tuples of state, action until reward becomes clear\n",
         "* use SGD analogous to supervised learning\n",
         "\n",
-        "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/pg.jpg'>\n"
+        "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/pg-train.jpg'>\n"
       ]
     },
     {
@@ -2217,7 +2217,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')\n"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2272,7 +2272,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2326,7 +2326,10 @@
         "* Makes it accessible to standard first order optimizers in NN backpropagation\n",
         "  * https://medium.com/@jonathan_hui/rl-proximal-policy-optimization-ppo-explained-77f014ec3f12\n",
         "* Default way is to clip  \n",
-        "  * https://arxiv.org/abs/1707.06347\n"
+        "  * https://arxiv.org/abs/1707.06347\n",
+        "\n",
+        "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/pg-to-ppo-train.jpg'>\n",
+        "\n"
       ]
     },
     {
@@ -2346,7 +2349,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2379,7 +2382,7 @@
         "# # plt.yscale('linear')\n",
         "# plt.plot(kl_losses[start_epoch:]);"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2420,7 +2423,7 @@
         "plt.xlabel('Step');\n",
         "# plt.yscale('log')"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2461,7 +2464,7 @@
         "plt.ylabel('Average Return')\n",
         "plt.xlabel('Step');\n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2493,7 +2496,7 @@
         "plt.ylabel('Length of episode')\n",
         "plt.xlabel('Step');\n"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2532,7 +2535,7 @@
       "source": [
         "tf_ppo_agent.collect_policy"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2559,7 +2562,7 @@
         "time_step = eval_env.reset()\n",
         "time_step"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2590,7 +2593,7 @@
         "step = tf_ppo_agent.collect_policy.action(time_step)\n",
         "step"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2617,7 +2620,7 @@
         "logits = step.info['dist_params']['logits']\n",
         "logits"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2643,7 +2646,7 @@
       "source": [
         "tf.exp(logits) / (1 + tf.exp(logits))"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2671,7 +2674,7 @@
       "source": [
         "tf_ppo_agent.policy"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2698,7 +2701,7 @@
         "time_step = eval_env.reset()\n",
         "tf_ppo_agent.policy.action(time_step)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2730,7 +2733,7 @@
         "tf_policy_saver = policy_saver.PolicySaver(tf_ppo_agent.policy)\n",
         "tf_policy_saver.save('policy')"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2768,7 +2771,7 @@
       "source": [
         "!ls -l policy"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2796,7 +2799,7 @@
         "saved_policy = tf.saved_model.load('policy')\n",
         "saved_policy.signatures"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2824,7 +2827,7 @@
         "action_step = saved_policy.action(time_step)\n",
         "action_step"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2854,7 +2857,7 @@
         "  print(action_step.action.numpy()[0])  \n",
         "  time_step = eval_env.step(action_step.action)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2916,7 +2919,7 @@
         "\n",
         "embed_mp4(video_filename)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2945,7 +2948,7 @@
       "source": [
         ""
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     }
   ]
