--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -295,7 +295,7 @@
         "# mpl.rcParams[\"figure.dpi\"] = 300\n",
         "mpl.__version__"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
         "    !pip install -q networkx 2>/dev/null\n",
         "    !pip install imageio-ffmpeg"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
         "import tf_agents\n",
         "tf_agents.__version__"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +406,7 @@
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
       "source": [
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
         "import tensorflow_probability as tfp\n",
         "tfp.__version__"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -503,7 +503,7 @@
         "import networkx as nx\n",
         "nx.__version__"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +956,7 @@
         "        else:\n",
         "            super().render(mode=mode)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,7 +979,7 @@
         "env = OrsoEnv()\n",
         "env.render(render_graph_labels=True)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1016,7 +1016,7 @@
         "observation, reward, done, info = env.step(1)\n",
         "reward, done, info"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1043,7 @@
       "source": [
         "env.render(render_graph_labels=True)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1142,7 +1142,7 @@
         "\n",
         "observation"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,7 +1171,7 @@
         "observation, reward, done, info = env.step(1)\n",
         "observation"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1199,7 +1199,7 @@
       "source": [
         "reward, done, info"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1251,7 +1251,7 @@
         "        break\n",
         "env.close()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,7 +1327,7 @@
       "source": [
         "env.render(render_graph_labels=True)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1396,7 +1396,7 @@
       "source": [
         "### PPO (Proximal Policy Optimization)\n",
         "\n",
-        "<img src='https://embarced.github.io/ml-concepts/img/rl2/ppo.png'>\n",
+        "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/ppo.png'>\n",
         "\n",
         "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/trajectories.jpg'>\n",
         "\n"
@@ -1410,7 +1410,7 @@
       "source": [
         "## PPO uses two networks\n",
         "\n",
-        "<img src='https://embarced.github.io/ml-concepts/img/rl2/drl-ppo.png'>"
+        "<img src='https://github.com/embarced/notebooks/raw/master/img/rl/drl-ppo.png'>\n"
       ]
     },
     {
@@ -1433,7 +1433,7 @@
         "train_env = tf_py_environment.TFPyEnvironment(train_py_env)\n",
         "eval_env = tf_py_environment.TFPyEnvironment(eval_py_env)          "
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1448,7 +1448,7 @@
       "source": [
         "train_env.observation_spec()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1489,7 +1489,7 @@
         "    # dropout_layer_params=(0.2, 0.2, 0.2)\n",
         "    )"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1506,7 +1506,7 @@
         "observation = time_step.observation\n",
         "value_net(observation)[0].numpy()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1545,7 +1545,7 @@
         "    # dropout_layer_params=(0.2, 0.2, 0.2)\n",
         "    )"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1562,7 +1562,7 @@
         "distribution, _ = actor_net(observation[0], time_step.step_type, ())\n",
         "distribution.logits.numpy()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1589,7 +1589,7 @@
         "# greedy, highest category\n",
         "distribution.mode().numpy()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1638,7 +1638,7 @@
         "# 25 by default, but we see better results with more frequent updates of the training data\n",
         "num_epochs =  10# @param {type:\"slider\", min:0, max:1000, step:1}\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1667,7 +1667,7 @@
         "    num_epochs=num_epochs)\n",
         "tf_ppo_agent.initialize()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1678,7 +1678,7 @@
       "source": [
         "# ppo_agent.PPOAgent?"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1727,7 +1727,7 @@
         "\n",
         "num_episodes =  10# @param {type:\"slider\", min:0, max:1000, step:1}\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1769,7 +1769,7 @@
         "tf_ppo_agent.train = common.function(tf_ppo_agent.train)\n",
         "collect_driver.run = common.function(collect_driver.run)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1786,7 +1786,7 @@
         "# as_dataset would allow choosing a smaller batch instead of full data set\n",
         "trajectories = replay_buffer.gather_all()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1803,17 +1803,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "vkOgoG6O2Qha",
-        "outputId": "8166aa77-221e-4843-f318-d1f075a11ce6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 315
-        }
+        },
+        "outputId": "8166aa77-221e-4843-f318-d1f075a11ce6"
       },
       "source": [
         "plt.figure(figsize=(10, 4))\n",
         "plt.hist(chosen_actions.result(), bins=4, density=True)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1849,7 +1849,7 @@
       "source": [
         "# trajectories?"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1865,7 +1865,7 @@
         "# batch_size = num_episodes * max_episode_steps (strangely off by one)\n",
         "trajectories.action[0].shape[0]"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1891,7 +1891,7 @@
       "source": [
         "trajectories.action[0]"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1929,7 +1929,7 @@
       "source": [
         "trajectories.observation[0]"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1962,7 +1962,7 @@
       "source": [
         "trajectories.reward[0]"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2037,7 +2037,7 @@
       "source": [
         "# tf_ppo_agent.train?"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2084,7 +2084,7 @@
         "num_iterations = 500 # @param {type:\"slider\", min:0, max:1000, step:1}\n",
         "log_interval = 25 # @param {type:\"slider\", min:0, max:100, step:1}"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2148,7 +2148,7 @@
         "        plt.hist(chosen_actions.result(), bins=4, density=True)\n",
         "        plt.show();"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4243,7 +4243,7 @@
         "mpl.rcParams['xtick.labelsize'] = 16\n",
         "mpl.rcParams['ytick.labelsize'] = 16"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4263,7 +4263,7 @@
         "plt.ylabel('Total loss')\n",
         "plt.xlabel('Step');"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4340,7 +4340,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4395,7 +4395,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4472,7 +4472,7 @@
         "plt.xlabel('Step');\n",
         "plt.yscale('log')"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4505,7 +4505,7 @@
         "# # plt.yscale('linear')\n",
         "# plt.plot(kl_losses[start_epoch:]);"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4545,7 +4545,7 @@
         "plt.ylabel('Loss')\n",
         "plt.xlabel('Step');"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4586,7 +4586,7 @@
         "plt.ylabel('Average Return')\n",
         "plt.xlabel('Step');\n"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4618,7 +4618,7 @@
         "plt.ylabel('Length of episode')\n",
         "plt.xlabel('Step');\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4657,7 +4657,7 @@
       "source": [
         "tf_ppo_agent.collect_policy"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4686,7 +4686,7 @@
         "logits = step.info['dist_params']['logits']\n",
         "logits"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4712,7 +4712,7 @@
       "source": [
         "tf_ppo_agent.policy"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4739,7 +4739,7 @@
         "time_step = eval_env.reset()\n",
         "tf_ppo_agent.policy.action(time_step)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4771,7 +4771,7 @@
         "tf_policy_saver = policy_saver.PolicySaver(tf_ppo_agent.policy)\n",
         "tf_policy_saver.save('policy')"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4809,7 +4809,7 @@
       "source": [
         "!ls -l policy"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4837,7 +4837,7 @@
         "saved_policy = tf.saved_model.load('policy')\n",
         "saved_policy.signatures"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4865,7 +4865,7 @@
         "action_step = saved_policy.action(time_step)\n",
         "action_step.action.numpy()[0]"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4895,7 +4895,7 @@
         "  print(action_step.action.numpy()[0])  \n",
         "  time_step = eval_env.step(action_step.action)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4961,7 +4961,7 @@
         "\n",
         "embed_mp4(video_filename)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4990,7 +4990,7 @@
       "source": [
         ""
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     }
   ]
