--- a/deep/rl_odsc_2021.ipynb
+++ b/deep/rl_odsc_2021.ipynb
@@ -111,7 +111,6 @@
         "  * links to primary sources, videos, papers\n",
         "* this notebook should serve as inpiration and collection of links\n",
         "* all interaction is welcome\n",
-        "* we will two breaks after one hour each\n",
         "\n",
         "## Olli\n",
         "* works as a ML consultant in Hamburg, Germany\n",
@@ -147,7 +146,7 @@
         "id": "srWUpSn1b22y"
       },
       "source": [
-        "# Iteration 2: Hands-On train your own RL model\n",
+        "# Iteration 2: Hands-On train your own RL model, present and discuss (if you would like to)\n",
         "\n",
         "**Getting your hands dirty**\n",
         "\n",
