--- a/deep/deep_rl.ipynb
+++ b/deep/deep_rl.ipynb
@@ -44,7 +44,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/embarced/notebooks/blob/master/deep/rl_odsc_2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/embarced/notebooks/blob/master/deep/deep_rl.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -53,74 +53,7 @@
         "id": "44SKfTDHsayI"
       },
       "source": [
-        "# Deep Dive into Reinforcement Learning with PPO using TF-Agents & TensorFlow\n",
-        "\n",
-        "3 hours\n",
-        "\n",
-        "https://odsc.com/speakers/deep-dive-into-reinforcement-learning-with-ppo-using-tf-agents-tensorflow-2-0/\n",
-        "\n",
-        "Link to this notebook: https://bit.ly/rl-odsc-2021"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aP0LCoo5ZlUI"
-      },
-      "source": [
-        "# Iteration 0: Preparation\n",
-        "\n",
-        "1. Make sure you are ready to work with Colab\n",
-        "  * open https://colab.research.google.com/notebooks/welcome.ipynb in Chrome (IE will not work)\n",
-        "  * make it run using the \"Run All\" command from the \"Runtime\" menu\n",
-        "  * you need to allow execution and must either have a Google login or are willing to create one\n",
-        "  * Log into your Google Account or create one when prompted do so so by the \n",
-        "  * Go through the notebook and make yourself comfortable with Colab\n",
-        "1. Get Access to this notebook\n",
-        "  * https://bit.ly/rl-odsc-2021\n",
-        "  * Open this notebook in Chrome\n",
-        "  * Make a copy to your Google Drive (File->Save a Copy in Drive)\n",
-        "  * Rename it to something more speaking"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jH8aBlG87Yss"
-      },
-      "source": [
-        "# Frontmatter\n",
-        "\n",
-        "## Why would you care about PPO?\n",
-        "\n",
-        "* RL is not really succesful in real world applications, yet\n",
-        "* That might change over time given more stability and sample efficiency\n",
-        "* PPO is super smart, though\n",
-        "  * Uses nice tricks: convert hard constraints to penalty losses\n",
-        "  * is just fun to watch\n",
-        "  * gives deeper insights into how DL works\n",
-        "* Having some knowledge about RL can complete your picture of machine learning  \n",
-        "  \n",
-        "## Philosophy of Workshop\n",
-        "* we will work in interations\n",
-        "* Deep Dive, yet open to anyone\n",
-        "  * Choose your level\n",
-        "  * there is much more material in this notebook than 3 hours can even remotely cover\n",
-        "  * there is no narative in the notebook itself, create your own\n",
-        "* Workshop should not be limited by my understanding\n",
-        "  * links to primary sources, videos, papers\n",
-        "* this notebook should serve as inpiration and collection of links\n",
-        "* all interaction is welcome\n",
-        "\n",
-        "## Olli\n",
-        "* works as a ML consultant in Hamburg, Germany\n",
-        "* programmer rather than a data scientist\n",
-        "* does not like formulas or papers, but manages to read them anyway (and so can you)\n",
-        "\n",
-        "## Hamburg, Germany\n",
-        "\n",
-        "<img src='https://github.com/embarced/notebooks/raw/master/img/ever_ace_hidden.jpg' style='height: 250px'>\n",
-        "<img src='https://github.com/embarced/notebooks/raw/master/img/insel.jpg' style='height: 250px'>"
+        "# Reinforcement Learning with PPO"
       ]
     },
     {
