--- a/deep/intro-regression-2022.ipynb
+++ b/deep/intro-regression-2022.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "intro-regression-2022.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +59,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +75,7 @@
         "\n",
         "figsize_3d = (20, 10)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +134,7 @@
         "\n",
         "plt.scatter(x, y);"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -216,7 +217,7 @@
         "import tensorflow as tf\n",
         "tf.__version__"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +242,7 @@
       "source": [
         "tf.random.set_seed(42)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,7 +298,7 @@
         "])\n",
         "model.summary()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +332,7 @@
         "kernel, bias = model.trainable_variables\n",
         "kernel.value(), bias.value"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +384,7 @@
       "metadata": {
         "id": "ENmcq1zQikUJ"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +402,7 @@
         "plt.scatter(x, y_pred, color='r')\n",
         "plt.scatter(x, y);"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -457,7 +458,7 @@
       "source": [
         "tf.losses.mean_squared_error(y_true=tf.squeeze(y_tensor), y_pred=tf.squeeze(y_pred)).numpy()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -546,7 +547,7 @@
         "\n",
         "min_params[0], min_params[1]"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -614,7 +615,7 @@
         "  \n",
         "  return R_squared"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -629,7 +630,7 @@
       "source": [
         "r2_metric(y_true=tf.squeeze(y_tensor), y_pred=tf.squeeze(y_pred)).numpy()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,6 +689,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow import GradientTape \n",
+        "# GradientTape?"
+      ],
+      "metadata": {
+        "id": "fL69pnAfLQsL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tape_sample():\n",
+        "  x = tf.Variable(3.0)\n",
+        "  with tf.GradientTape() as tape:\n",
+        "    y = x * x\n",
+        "  print(\"x: {}, y:{}\".format(x.numpy(), y.numpy()))\n",
+        "  # how is y dependending on x\n",
+        "  dy_dx = tape.gradient(y, x)\n",
+        "  print(\"dy/dx: {}\".format(dy_dx.numpy()))\n",
+        "  \n",
+        "# just a function in order not to interfere with x on the global scope  \n",
+        "tape_sample()"
+      ],
+      "metadata": {
+        "id": "TS1DLnHjLRUG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "IhN9Ced-77fM"
@@ -744,7 +778,7 @@
         "  model.trainable_weights[0].assign_sub(learning_rate * dw)\n",
         "  model.trainable_weights[1].assign_sub(learning_rate * db)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +809,7 @@
         "\n",
         "plt.plot(losses);"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -808,7 +842,7 @@
         "\n",
         "plt.plot(r2s);"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -840,7 +874,7 @@
         "plt.scatter(x, y_pred, color='r')\n",
         "plt.scatter(x, y);"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -898,7 +932,7 @@
       "source": [
         "optimizer = tf.keras.optimizers.SGD(learning_rate=1e-2)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +977,7 @@
         "  # Update the weights of our linear layer.\n",
         "  optimizer.apply_gradients(zip(gradients, model.trainable_weights))"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,7 +1007,7 @@
         "\n",
         "plt.plot(losses);"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1006,7 +1040,7 @@
         "\n",
         "plt.plot(r2s);"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1038,7 +1072,7 @@
         "plt.scatter(x, y_pred, color='r')\n",
         "plt.scatter(x, y);"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1086,7 +1120,7 @@
         "])\n",
         "model.summary()"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1126,7 +1160,7 @@
         "# does a similar thing internally as our loop from above\n",
         "history = model.fit(x, y, epochs=1000, verbose=0)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1151,7 +1185,7 @@
         "loss, r2 = model.evaluate(x, y, verbose=0)\n",
         "loss, r2"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1183,7 +1217,7 @@
         "\n",
         "plt.plot(history.history['loss']);"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1217,7 +1251,7 @@
         "\n",
         "plt.plot(history.history['r2_metric']);"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1249,7 +1283,7 @@
         "plt.scatter(x, y_pred, color='red')\n",
         "plt.scatter(x, y);"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1335,7 +1369,7 @@
         "\n",
         "plt.scatter(x, y);"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1360,7 +1394,7 @@
       "metadata": {
         "id": "bQIKix1Zlur3"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1475,7 +1509,7 @@
       "source": [
         " !pip install -q drawdata"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1505,7 +1539,7 @@
         "\n",
         "draw_line()"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1541,7 +1575,7 @@
         "drawdata_data = \"\"\"\n",
         "\"\"\""
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1561,7 +1595,7 @@
         "df = pd.read_csv(StringIO(drawdata_data))\n",
         "df.head()"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1727,7 +1761,7 @@
         "x = df['x']\n",
         "y = df['y']"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1743,7 +1777,7 @@
           "height": 483
         }
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1768,7 +1802,7 @@
       "metadata": {
         "id": "2HiGKT6Xo3Nc"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
